[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-structures"
version = "0.0.1"
description = "A collection of data structures"
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "ruff"
]

[tool.ruff.lint]
ignore = []
