[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-structures"
version = "0.0.1"
description = "A collection of data structures"
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "ruff"
]

[tool.ruff.lint]
# E741: do not use variables named 'l', 'O', or 'I'
# PERF401 Use a list comprehension to create a transformed list
ignore = ["E741", "PERF401"]
